--- a/minal2.css
+++ b/minal2.css
@@ -101,6 +101,15 @@ transition: all 0.2s;
 .btn:hover {
 transform: translateY(-1px);
 box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+display: flex;
+align-items: center;
+gap: 2px;
+padding: 12px 16px;
+font-size: 12px;
+/* margin-bottom: 5px;
+border-radius: 10px; */
+cursor: pointer;
+transition: 0.3s;
 }
 .btn.primary { 
 background: var(--accent); 
